# rust-sentence-transformers-clj

./: .gitignore  README.md  compile.sh
clj/rust-sentence-transformers-clj/: project.clj
clj/rust-sentence-transformers-clj/src-java/: ClojureRust.java
clj/rust-sentence-transformers-clj/src/rust_sentence_transformers_clj/: core.clj
rs/: Cargo.toml
rs/src/: lib.rs
